--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,20 @@
 德国之声
 ------
 
+6-21 [台湾陆委邱太三发声明谴责矮化台湾](/articles/dw/1041814.md)
+
+6-21 [东京奥运会：现场观众上限一万人](/articles/dw/1041815.md)
+
+6-21 [德语媒体: 中国为何不肯放松防疫措施](/articles/dw/1041816.md)
+
+6-21 [新世界七大奇迹](/articles/dw/1041817.md)
+
+6-21 [儿童画笔下的疫情世界](/articles/dw/1041818.md)
+
+6-21 [联合国人权专员希望今年获准入疆调查维吾尔人权](/articles/dw/1041819.md)
+
+6-21 [2021年品牌价值排行榜：中国品牌已远超欧洲](/articles/dw/1041820.md)
+
 6-21 [联盟党竞选纲领：最大国际挑战来自中国](/articles/dw/1041821.md)
 
 6-21 [“躺平“也不行：“躺平T恤”下架是为何？](/articles/dw/1041822.md)
@@ -586,18 +600,4 @@
 6-4 [更多中国公司被列入美国黑名单](/articles/dw/1042112.md)
 
 6-4 [东京奥运雪上加霜 志愿者纷纷告退](/articles/dw/1042113.md)
-
-6-4 [图片回顾：那些曾经支持六四民运的香港明星](/articles/dw/1042114.md)
-
-6-4 [国安法罩顶  香港老师如何教六四？](/articles/dw/1042115.md)
-
-6-4 [「维吾尔特别法庭」伦敦开审 中国批「反华闹剧」](/articles/dw/1042116.md)
-
-6-4 [这些年，香港台湾是这样紀念六四的](/articles/dw/1042117.md)
-
-6-4 [图片回顾：32年前支持六四民运的那些香港明星](/articles/dw/1042118.md)
-
-6-4 [管过界? 港警要求以色列公司下架网站](/articles/dw/1042119.md)
-
-6-4 [六四32周年：台湾纪念活动首见「奶茶联盟」](/articles/dw/1042120.md)
 
