--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-22 [维舟｜葛剑雄的史学观](/articles/cdt/381241.md)
+
 6-21 [【404文库】十堰爆炸事故最新披露：初步原因分析主要有三点](/articles/cdt/381244.md)
 
 6-21 [雨过湘南｜科普的寒冬：回形针、大象公会和科学松鼠会消亡史](/articles/cdt/381253.md)
@@ -598,6 +600,4 @@
 5-16 [多数派 |《何以为家》被沉默，“合村并居”无所依](/articles/cdt/382541.md)
 
 5-15 [Matters | 港人流亡日记：家的距离](/articles/cdt/382543.md)
-
-5-15 [【网络民议】你误会了！不止同性没床戏，异性也没有！](/articles/cdt/382547.md)
 
