--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-22 [美警示中国：若拒绝新冠病毒溯源真正调查将被国际孤立](/articles/voa/1039996.md)
+
 6-21 [伊朗总统当选人称他不会见拜登，并重申强硬派立场](/articles/voa/1039997.md)
 
 6-21 [中国严打加密货币挖矿及交易 比特币价格周一暴跌](/articles/voa/1039998.md)
@@ -598,6 +600,4 @@
 6-7 [中国加大打击加密货币力度 多个相关社媒平台账号遭屏蔽](/articles/voa/1040294.md)
 
 6-7 [研究指中共对新疆少数民族控制生育政策20年可减人口450万](/articles/voa/1040295.md)
-
-6-7 [言者无意 听者有心？“小红书”微博账号因六四贴文遭当局封闭](/articles/voa/1040296.md)
 
