--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-22 [北京下令四川断电遏制数字货币&quot;挖矿&quot;行业](/articles/rfi/1027637.md)
+
 6-22 [摆脱美国利率阴影 欧股反弹 – 法国国际广播电台 - RFI](/articles/rfi/1027638.md)
 
 6-22 [瑞典首相被议会推翻，要么辞职要么提前选举](/articles/rfi/1027639.md)
@@ -598,6 +600,4 @@
 6-16 [继香港之后澳门当局今宣布驻台机构暂停运作台湾表达遗憾](/articles/rfi/1027935.md)
 
 6-16 [金正恩坦言：粮食情况紧张 – 法国国际广播电台 - RFI](/articles/rfi/1027936.md)
-
-6-16 [联国专家指中国有强摘少数族裔器官之忧 中方斥诬蔑促纠正](/articles/rfi/1027937.md)
 
