--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-22 [日本防卫大臣就中国军事扩张呼吁欧日合作](/articles/rfa/1045270.md)
+
 6-21 [拒承诺“一中”  台湾驻港办事处七 官员离港返台](/articles/rfa/1045271.md)
 
 6-21 [江天勇被软禁探访者遭逮捕    湖南欧彪峰疑被化名关押](/articles/rfa/1045272.md)
@@ -598,6 +600,4 @@
 5-18 [中共“七一”百年党庆临时安排空中阅兵](/articles/rfa/1045568.md)
 
 5-18 [澳铁矿石价涨五成  中国稀土价跌跌不休](/articles/rfa/1045569.md)
-
-5-18 [新疆报告：上千神职人员被关押 伊斯兰教正被终结](/articles/rfa/1045570.md)
 
