--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-22 [为什么中国对加密数字货币态度越来越强硬？](/articles/rfi/1027636.md)
+
 6-22 [北京下令四川断电遏制数字货币&quot;挖矿&quot;行业](/articles/rfi/1027637.md)
 
 6-22 [摆脱美国利率阴影 欧股反弹 – 法国国际广播电台 - RFI](/articles/rfi/1027638.md)
@@ -598,6 +600,4 @@
 6-16 [澳门驻台经济文化办事处暂停运作 – 法国国际广播电台 - RFI](/articles/rfi/1027934.md)
 
 6-16 [继香港之后澳门当局今宣布驻台机构暂停运作台湾表达遗憾](/articles/rfi/1027935.md)
-
-6-16 [金正恩坦言：粮食情况紧张 – 法国国际广播电台 - RFI](/articles/rfi/1027936.md)
 
