--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-22 [东京奥运会赛场观众人数上限确定为一万](/articles/voa/1039993.md)
+
 6-22 [伊朗紧急关闭唯一核电厂，官方仅称出现“技术故障”](/articles/voa/1039994.md)
 
 6-22 [UN人权官员希望就今年访问中国新疆达成共识](/articles/voa/1039995.md)
@@ -598,6 +600,4 @@
 6-8 [审查孔子学院 日本、澳大利亚展开行动](/articles/voa/1040291.md)
 
 6-8 [中国恶性持刀杀人伤人事件频发 百年党庆在即中共频遭打脸](/articles/voa/1040292.md)
-
-6-7 [美参议员访台 为何中国网民对北京发难？](/articles/voa/1040293.md)
 
