--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-22 [时事大家谈: 百年党庆，习近平高举共产主义大旗？](/articles/voa/1039992.md)
+
 6-22 [东京奥运会赛场观众人数上限确定为一万](/articles/voa/1039993.md)
 
 6-22 [伊朗紧急关闭唯一核电厂，官方仅称出现“技术故障”](/articles/voa/1039994.md)
@@ -598,6 +600,4 @@
 6-8 [遏制骇客网攻 美拟加大打击力度包括军事选项](/articles/voa/1040290.md)
 
 6-8 [审查孔子学院 日本、澳大利亚展开行动](/articles/voa/1040291.md)
-
-6-8 [中国恶性持刀杀人伤人事件频发 百年党庆在即中共频遭打脸](/articles/voa/1040292.md)
 
