--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-22 [欧盟对缅甸军人政权实施新制裁](/articles/voa/1039990.md)
+
+6-22 [美国公布其全球疫苗共享计划大纲](/articles/voa/1039991.md)
+
 6-22 [时事大家谈: 百年党庆，习近平高举共产主义大旗？](/articles/voa/1039992.md)
 
 6-22 [东京奥运会赛场观众人数上限确定为一万](/articles/voa/1039993.md)
@@ -596,8 +600,4 @@
 6-8 [时事大家谈: “战狼国师”奉旨宣教，习近平会放弃战狼外交？](/articles/voa/1040288.md)
 
 6-8 [香港网上集会悼念李旺阳逝世9周年 民调显示62%不认同悼念六四危害国安](/articles/voa/1040289.md)
-
-6-8 [遏制骇客网攻 美拟加大打击力度包括军事选项](/articles/voa/1040290.md)
-
-6-8 [审查孔子学院 日本、澳大利亚展开行动](/articles/voa/1040291.md)
 
