--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-22 [专访黎智英顾问西蒙：苹果停刊将意味着香港法治和私产权的消亡](/articles/rfa/1045268.md)
+
 6-22 [联合国人权专员首度喊话 望今年准入新疆调查种族灭绝](/articles/rfa/1045269.md)
 
 6-22 [日本防卫大臣就中国军事扩张呼吁欧日合作](/articles/rfa/1045270.md)
@@ -598,6 +600,4 @@
 5-18 [香港候任主教周守仁登场  六四、强拆十字架议题  他怎么说？](/articles/rfa/1045566.md)
 
 5-18 [台湾确诊数稍降 两岸为疫苗拌嘴](/articles/rfa/1045567.md)
-
-5-18 [中共“七一”百年党庆临时安排空中阅兵](/articles/rfa/1045568.md)
 
