--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+6-22 [姜文华被控“故意杀人”  身亡书记被讽“求仁得仁”？](/articles/rfa/1045265.md)
+
+6-22 [百位说唱者献唱百年党庆   差评如潮](/articles/rfa/1045266.md)
+
+6-22 [字节跳动引发讨论  “大小周”+加班费合法吗？](/articles/rfa/1045267.md)
+
 6-22 [专访黎智英顾问西蒙：苹果停刊将意味着香港法治和私产权的消亡](/articles/rfa/1045268.md)
 
 6-22 [联合国人权专员首度喊话 望今年准入新疆调查种族灭绝](/articles/rfa/1045269.md)
@@ -594,10 +600,4 @@
 5-18 [德国自民党删除“一中”   支持台湾人民自决](/articles/rfa/1045563.md)
 
 5-18 [香港突停在台经贸办运作 学者称将影响中国芯片供应链](/articles/rfa/1045564.md)
-
-5-18 [台湾驻港办事处逾5万中国禁忌程式全消失 纽时：苹果向中国政府妥协](/articles/rfa/1045565.md)
-
-5-18 [香港候任主教周守仁登场  六四、强拆十字架议题  他怎么说？](/articles/rfa/1045566.md)
-
-5-18 [台湾确诊数稍降 两岸为疫苗拌嘴](/articles/rfa/1045567.md)
 
