--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-22 [【立此存照】我是落生：因微博发声多次被警察约谈的经历](/articles/cdt/381223.md)
+
 6-22 [维舟｜葛剑雄的史学观](/articles/cdt/381241.md)
 
 6-21 [【404文库】十堰爆炸事故最新披露：初步原因分析主要有三点](/articles/cdt/381244.md)
@@ -598,6 +600,4 @@
 5-16 [光之祭 | 我究竟是不是一个女权主义者？](/articles/cdt/382535.md)
 
 5-15 [围炉 | 肖美丽事件 ：偏狭、荒诞、审查与流量狂欢](/articles/cdt/382537.md)
-
-5-16 [多数派 |《何以为家》被沉默，“合村并居”无所依](/articles/cdt/382541.md)
 
