--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+6-22 [中国楼市：消失的屋顶如何找回？](/articles/ft/1045445.md)
+
+6-22 [朝鲜劳动党八届三中全会的看点和疑点](/articles/ft/1045446.md)
+
 6-21 [FT金融硕士排名：法国院校表现亮眼](/articles/ft/1045447.md)
 
 6-21 [双循环互动：现状、发展和长期趋势](/articles/ft/1045448.md)
@@ -596,8 +600,4 @@
 4-19 [填补“一带一路”投融资缺口的旧题新解](/articles/ft/1045743.md)
 
 4-16 [中国一季度GDP同比增长18.3%](/articles/ft/1045744.md)
-
-4-16 [每周时事分析：福岛核废水，重点在实地调查和第三方监督机制](/articles/ft/1045745.md)
-
-4-16 [沙岭殡葬城与红磡殡仪馆：香港议员更应该关心哪一个？](/articles/ft/1045746.md)
 
