--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-22 [“七国”承诺合作应对气候变化 专家：虽取得共识但承诺不具体](/articles/voa/1039987.md)
+
+6-22 [西班牙首相宣布赦免9名加泰罗尼亚分离分子](/articles/voa/1039988.md)
+
 6-22 [美最高法院裁定美国全国大学体育协会败诉](/articles/voa/1039989.md)
 
 6-22 [欧盟对缅甸军人政权实施新制裁](/articles/voa/1039990.md)
@@ -596,8 +600,4 @@
 6-8 [强劲国际需求导致中国5月份贸易额比去年大幅上涨，对美顺差扩大](/articles/voa/1040285.md)
 
 6-8 [美国欢迎缅甸影子政府承诺帮助罗兴亚人](/articles/voa/1040286.md)
-
-6-8 [亚马逊创始人贝索斯宣布计划下月进行太空之旅](/articles/voa/1040287.md)
-
-6-8 [时事大家谈: “战狼国师”奉旨宣教，习近平会放弃战狼外交？](/articles/voa/1040288.md)
 
