--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-22 [中共党庆前夕这几件事很诡异](/articles/rfi/1027619.md)
+
+6-22 [法国地方选举后果 马克龙对决勒庞前景破局？ - 要闻分析](/articles/rfi/1027620.md)
+
 6-22 [伊朗核电厂似进行维修 暂时关闭 – 法国国际广播电台 - RFI](/articles/rfi/1027621.md)
 
 6-22 [陷入绝境的香港《苹果日报》，依然高昂着头 - 法国世界报](/articles/rfi/1027622.md)
@@ -596,8 +600,4 @@
 6-16 [日防相在东盟防长扩大会议提台海和平稳定重要性](/articles/rfi/1027917.md)
 
 6-16 [制衡中国 美国防部考虑在太平洋组建常设海军特遣部队](/articles/rfi/1027918.md)
-
-6-16 [全球疫情确诊逾1亿7656万例 超过382万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1027919.md)
-
-6-16 [白俄迫降客机事件 欧盟同意祭出新制裁 – 法国国际广播电台 - RFI](/articles/rfi/1027920.md)
 
