--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-22 [C计划 | “舔狗”“吃瓜”“带节奏”…网络流行词如何污染公共讨论？](/articles/cdt/381219.md)
+
 6-22 [谈艺权慕文有年 | 唐家派出所审讯夜](/articles/cdt/381220.md)
 
 6-22 [【立此存照】我是落生：因微博发声多次被警察约谈的经历](/articles/cdt/381223.md)
@@ -598,6 +600,4 @@
 5-16 [【网络民议】豆瓣电影关闭影片IMDb条目超链接](/articles/cdt/382531.md)
 
 5-15 [立场新闻 | 香港《852邮报》宣布“暂别” 创办人游清源：拟立《假新闻法》是导火线](/articles/cdt/382534.md)
-
-5-16 [光之祭 | 我究竟是不是一个女权主义者？](/articles/cdt/382535.md)
 
