--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+6-22 [美股大涨 道指录得逾三个月最大单日涨幅](/articles/reuters/1036658.md)
+
+6-22 [美元从两个月高位回落 中国加大力度打击挖矿拖累比特币急挫](/articles/reuters/1036659.md)
+
+6-22 [油价急升 受助于美元下跌和伊朗供应不确定性](/articles/reuters/1036660.md)
+
+6-22 [金价收复部分失地 因美元涨势暂停扶助黄金恢复吸引力](/articles/reuters/1036661.md)
+
 6-21 [中国银保机构关联交易新规征求意见 要求不得不当利益输送或监管套利](/articles/reuters/1036662.md)
 
 6-21 [俄罗斯和美国将讨论大使馆工作“正常化”--俄新社](/articles/reuters/1036663.md)
@@ -592,12 +600,4 @@
 6-11 [美指重返90上方人民币收盘微跌 市场关注焦点转向下周FED决议](/articles/reuters/1036956.md)
 
 6-11 [《独家》英国外交大臣：我们不支持“疫苗外交” 但有人在利用疫苗](/articles/reuters/1036957.md)
-
-6-11 [IEA月报：OPEC+将需要提高石油产量 以满足2022年需求复苏](/articles/reuters/1036958.md)
-
-6-11 [国药集团中国生物北京生物所新冠疫苗获准用于中国3-17岁人群--中疾控专家](/articles/reuters/1036959.md)
-
-6-11 [中国央行官员：微信和支付宝仍承担金融基础设施职能 参与数字人民币发行流通](/articles/reuters/1036960.md)
-
-6-11 [中国股市在白酒和金融板块拖累下收跌 且为连续第二周收低](/articles/reuters/1036961.md)
 
