--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-22 [《苹果日报》申请资产解封 26日后恐停刊](/articles/dw/1041812.md)
+
+6-22 [联合国官員盼今年入疆调查 中：应是友好访问](/articles/dw/1041813.md)
+
 6-21 [台湾陆委邱太三发声明谴责矮化台湾](/articles/dw/1041814.md)
 
 6-21 [东京奥运会：现场观众上限一万人](/articles/dw/1041815.md)
@@ -596,8 +600,4 @@
 6-4 [涉宣传未经批准集结 支联会副主席邹幸彤被捕](/articles/dw/1042110.md)
 
 6-4 [剑指中国？欧盟打出“国际采购工具“这张牌](/articles/dw/1042111.md)
-
-6-4 [更多中国公司被列入美国黑名单](/articles/dw/1042112.md)
-
-6-4 [东京奥运雪上加霜 志愿者纷纷告退](/articles/dw/1042113.md)
 
