--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-22 [《苹果》26日后恐停刊 林郑:新闻不能影响国安](/articles/dw/1041809.md)
+
+6-22 [脱欧后拼贸易 英国盼加入CPTPP](/articles/dw/1041810.md)
+
 6-22 [台湾陆委会主委邱太三发声明谴责矮化台湾](/articles/dw/1041811.md)
 
 6-22 [《苹果日报》申请资产解封 26日后恐停刊](/articles/dw/1041812.md)
@@ -596,8 +600,4 @@
 6-4 [匈牙利拒绝谴责中国  德国外交官呼吁欧盟改革](/articles/dw/1042107.md)
 
 6-4 [德语媒体：真相在哪里？](/articles/dw/1042108.md)
-
-6-4 [香港出动大批警力封闭维园 支联会副主席被捕](/articles/dw/1042109.md)
-
-6-4 [涉宣传未经批准集结 支联会副主席邹幸彤被捕](/articles/dw/1042110.md)
 
