--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-22 [UN：人权状况正经历有生以来最严重倒退 – 法国国际广播电台 - RFI](/articles/rfi/1027618.md)
+
 6-22 [中共党庆前夕这几件事很诡异](/articles/rfi/1027619.md)
 
 6-22 [法国地方选举后果 马克龙对决勒庞前景破局？ - 要闻分析](/articles/rfi/1027620.md)
@@ -598,6 +600,4 @@
 6-16 [马克龙：坚决反对对澳大利亚采取胁迫性经济措施](/articles/rfi/1027916.md)
 
 6-16 [日防相在东盟防长扩大会议提台海和平稳定重要性](/articles/rfi/1027917.md)
-
-6-16 [制衡中国 美国防部考虑在太平洋组建常设海军特遣部队](/articles/rfi/1027918.md)
 
