--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,12 @@
 纽约时报
 ------
 
+6-22 [中国艺术家偷拍数千女生并按外貌排名引发争议](/articles/nyt/1046698.md)
+
+6-22 [纽约时报中文网招聘启事](/articles/nyt/1046699.md)
+
+6-22 [纽约时报中文网招聘启事](/articles/nyt/1046700.md)
+
 6-22 [深圳因疫情启动严控措施，盐田港拥堵重创全球供应链](/articles/nyt/1046701.md)
 
 6-22 [简报：东京奥运会将允许国内观众入场；中国谴责美国疫苗入台](/articles/nyt/1046702.md)
@@ -594,10 +600,4 @@
 4-7 [离家出走自驾游，56岁的她成为中国女权主义偶像](/articles/nyt/1046996.md)
 
 4-7 [中国如何推动疫苗接种？从买一赠一冰淇淋开始](/articles/nyt/1046997.md)
-
-4-7 [简报：中国高压利诱推进疫苗接种；抵制潮令本土品牌获益](/articles/nyt/1046998.md)
-
-4-6 [当爱国主义成为卖点：中国品牌从“抵制潮”中看到机会](/articles/nyt/1046999.md)
-
-4-6 [著名汉学家施舟人逝世，享年86岁](/articles/nyt/1047000.md)
 
