--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-22 [中国驻美大使崔天凯宣布近期离任 称美中关系处在关键十字路口](/articles/voa/1039982.md)
+
 6-22 [“没钱、没的做新闻”：资产冻结、员工被捕，香港最后一份民主派报纸恐将终结](/articles/voa/1039983.md)
 
 6-22 [联合国难民事务高级专员对美国重新安置计划的改变感到鼓舞](/articles/voa/1039984.md)
@@ -598,6 +600,4 @@
 6-8 [苹果公司称其隐私保护新功能将无法在中国等地使用](/articles/voa/1040280.md)
 
 6-8 [美国从袭击“殖民管道”的黑客手中夺回赎金](/articles/voa/1040281.md)
-
-6-8 [“我们必须开始反击”：佛州州长签署针对中国的两项法案](/articles/voa/1040282.md)
 
