--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -15,6 +15,8 @@
 
 6-22 [【立此存照】我是落生：因微博发声多次被警察约谈的经历](/articles/cdt/381223.md)
 
+6-22 [【网络民议】赵立坚：美国至少有50万人遭受现代奴役  微博评论大型翻车](/articles/cdt/381239.md)
+
 6-22 [维舟｜葛剑雄的史学观](/articles/cdt/381241.md)
 
 6-21 [【404文库】十堰爆炸事故最新披露：初步原因分析主要有三点](/articles/cdt/381244.md)
@@ -598,6 +600,4 @@
 5-17 [卖杏花｜躺平就躺平，不必抱歉](/articles/cdt/382488.md)
 
 5-17 [【CDT周报】第十七期：官媒垄断的“真相”，只显示了官方操控媒体这一个真相](/articles/cdt/382490.md)
-
-5-16 [BBC | 习近平比作“小熊维尼” 网友创意遭删](/articles/cdt/382513.md)
 
