--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-22 [日经收涨逾3.1% – 法国国际广播电台 - RFI](/articles/rfi/1027611.md)
+
+6-22 [不满记者要他戴口罩 巴西总统再暴走骂媒体垃圾 – 法国国际广播电台 - RFI](/articles/rfi/1027612.md)
+
+6-22 [有望重回谈判桌？ 北韩：错误的期待 – 法国国际广播电台 - RFI](/articles/rfi/1027613.md)
+
 6-22 [联合国可能将大堡礁列濒危名单 澳洲将提挑战 – 法国国际广播电台 - RFI](/articles/rfi/1027614.md)
 
 6-22 [义大利防疫令松绑 不再强制戴口罩 – 法国国际广播电台 - RFI](/articles/rfi/1027615.md)
@@ -594,10 +600,4 @@
 6-17 [研究：帮浦持续给药 有助降低巴金森氏症药效波动 – 法国国际广播电台 - RFI](/articles/rfi/1027909.md)
 
 6-17 [拜登与蒲亭首次峰会  历时3.5小时结束 – 法国国际广播电台 - RFI](/articles/rfi/1027910.md)
-
-6-17 [波札那发现1098克拉全球第三大钻石原石 – 法国国际广播电台 - RFI](/articles/rfi/1027911.md)
-
-6-17 [法国明日起解除户外佩戴口罩令 周日起解除宵禁](/articles/rfi/1027912.md)
-
-6-17 [疫情升温 莫斯科市下令强制服务业接种疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1027913.md)
 
