--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -15,6 +15,8 @@
 
 6-22 [【立此存照】我是落生：因微博发声多次被警察约谈的经历](/articles/cdt/381223.md)
 
+6-22 [现代聊斋余少镭｜再给复旦中文系及护旦诸公上一课](/articles/cdt/381238.md)
+
 6-22 [【网络民议】赵立坚：美国至少有50万人遭受现代奴役  微博评论大型翻车](/articles/cdt/381239.md)
 
 6-22 [维舟｜葛剑雄的史学观](/articles/cdt/381241.md)
@@ -598,6 +600,4 @@
 5-17 [【图说天朝】泰剧《禁忌女孩》官方海报涉嫌辱华 大陆网民宣布弃剧](/articles/cdt/382485.md)
 
 5-17 [卖杏花｜躺平就躺平，不必抱歉](/articles/cdt/382488.md)
-
-5-17 [【CDT周报】第十七期：官媒垄断的“真相”，只显示了官方操控媒体这一个真相](/articles/cdt/382490.md)
 
