--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-22 [时代财经｜告别挖矿时代：中小矿主连夜”跑路” 矿机价格腰斩](/articles/cdt/381205.md)
+
+6-22 [极昼工作室｜二本毕业生的通宵洗车摊：他们从未摆脱生存困境](/articles/cdt/381207.md)
+
 6-22 [德国之声 | 近20年来首次  香港七一游行不办了](/articles/cdt/381213.md)
 
 6-22 [【CDT推荐】本周推荐媒体](/articles/cdt/381214.md)
@@ -596,8 +600,4 @@
 5-17 [NGOCN｜读者来函：关于成都49中事件的个人想法：“不要乱发瘪言”？](/articles/cdt/382479.md)
 
 5-17 [奇客资讯｜中国可能强化对加密货币的监管](/articles/cdt/382481.md)
-
-5-17 [【图说天朝】泰剧《禁忌女孩》官方海报涉嫌辱华 大陆网民宣布弃剧](/articles/cdt/382485.md)
-
-5-17 [卖杏花｜躺平就躺平，不必抱歉](/articles/cdt/382488.md)
 
