--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-22 [美国批港府控《苹果》出于政治动机  黎智英获颁伊菲尔新闻自由奖](/articles/rfi/1027602.md)
+
+6-22 [《苹果》部分网上新闻已停 前高层指已现「报禁」事关全港](/articles/rfi/1027603.md)
+
+6-22 [港澳商讨通关 香港明起放宽防疫社距 惟4人限聚令不变](/articles/rfi/1027604.md)
+
+6-22 [香港特首：媒体不应涉及颠覆政府 – 法国国际广播电台 - RFI](/articles/rfi/1027605.md)
+
 6-22 [联合国年度报告：COVID-19加剧全球战乱国家侵犯儿童事件 – 法国国际广播电台 - RFI](/articles/rfi/1027606.md)
 
 6-22 [老鼠大军侵入监狱  澳洲新南威尔斯州急撤数百囚 – 法国国际广播电台 - RFI](/articles/rfi/1027607.md)
@@ -592,12 +600,4 @@
 6-17 [澳洲悉尼零确诊破功     一个多月后再传本土病例](/articles/rfi/1027900.md)
 
 6-17 [东盟防长低调开会 美海军特遣舰队或将在太平洋上悄然成型 - 要闻分析](/articles/rfi/1027901.md)
-
-6-17 [法国最美村庄之一](/articles/rfi/1027902.md)
-
-6-17 [加沙停火后 以色列哈马斯首度互射弹炮](/articles/rfi/1027903.md)
-
-6-17 [法国退休改革将无法避免 - 今日经济](/articles/rfi/1027904.md)
-
-6-17 [中国官方：台山核电厂出现燃料棒破损故障但未发生辐射泄漏事故](/articles/rfi/1027905.md)
 
