--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+6-22 [军人武装待命 “七一”中共党庆如临大敌   访民形容 “空前严厉”](/articles/rfa/1045263.md)
+
+6-22 [美台日欧科技产业结盟 强化供应链韧性](/articles/rfa/1045264.md)
+
 6-22 [姜文华被控“故意杀人”  身亡书记被讽“求仁得仁”？](/articles/rfa/1045265.md)
 
 6-22 [百位说唱者献唱百年党庆   差评如潮](/articles/rfa/1045266.md)
@@ -596,8 +600,4 @@
 5-19 [助人翻墙遭遇取保候审：一位旅韩中国学生的故事](/articles/rfa/1045561.md)
 
 5-19 [台湾人国籍登记为中国   向欧洲人权法院状告挪威政府](/articles/rfa/1045562.md)
-
-5-18 [德国自民党删除“一中”   支持台湾人民自决](/articles/rfa/1045563.md)
-
-5-18 [香港突停在台经贸办运作 学者称将影响中国芯片供应链](/articles/rfa/1045564.md)
 
