--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-22 [中共百年大庆典前夕安保升级](/articles/dw/1041802.md)
+
+6-22 [崔天凯发表辞别信 继任是谁引关注](/articles/dw/1041803.md)
+
 6-22 [史海回眸：80年前德国入侵苏联](/articles/dw/1041804.md)
 
 6-22 [有效率超92%！古巴报告国产疫苗高疗效](/articles/dw/1041805.md)
@@ -596,8 +600,4 @@
 6-5 [象群罕见北迁 全民争相围观](/articles/dw/1042100.md)
 
 6-5 [德语媒体：严刑峻法管不了港人的心](/articles/dw/1042101.md)
-
-6-5 [七张图看一周大事](/articles/dw/1042102.md)
-
-6-5 [超过6万名荷兰家长向TikTok索赔](/articles/dw/1042103.md)
 
