--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-22 [BDI主席：面对中国 德国应提倡负责任的共存与合作](/articles/dw/1041800.md)
+
+6-22 [评论：联盟党派的竞选纲领无法令人振奋](/articles/dw/1041801.md)
+
 6-22 [中共百年大庆典前夕安保升级](/articles/dw/1041802.md)
 
 6-22 [崔天凯发表辞别信 继任是谁引关注](/articles/dw/1041803.md)
@@ -596,8 +600,4 @@
 6-5 [“坦克人”照片搜不到 微软Bing被质疑屏蔽六四敏感内容](/articles/dw/1042098.md)
 
 6-5 [反对设复旦分校 匈牙利抗议活动持续](/articles/dw/1042099.md)
-
-6-5 [象群罕见北迁 全民争相围观](/articles/dw/1042100.md)
-
-6-5 [德语媒体：严刑峻法管不了港人的心](/articles/dw/1042101.md)
 
