--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-22 [立陶宛赠两万剂新冠疫苗 台湾朝野同表感谢](/articles/voa/1039975.md)
+
 6-22 [香港高院司法复核结果：维持首例国安法案审理不设陪审团的决定](/articles/voa/1039976.md)
 
 6-22 [苹果日报英文版和财经网停运，报社可能被迫提前关门](/articles/voa/1039977.md)
@@ -598,6 +600,4 @@
 6-8 [针对中国不公平贸易行为 美国设立贸易“纠察队”](/articles/voa/1040273.md)
 
 6-8 [美前高官：中国制裁欧盟是“巨大战略错误”](/articles/voa/1040274.md)
-
-6-8 [生育“三难”如拦路虎 “三孩”政策难实施](/articles/voa/1040275.md)
 
