--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-22 [“躺平” T恤、手机壳及车贴等全线下架](/articles/rfa/1045261.md)
+
 6-22 [用马克思理论否定相对论   河北学者获官方推荐竞逐科学奖](/articles/rfa/1045262.md)
 
 6-22 [军人武装待命 “七一”中共党庆如临大敌   访民形容 “空前严厉”](/articles/rfa/1045263.md)
@@ -598,6 +600,4 @@
 5-19 [中国四月份经济增速趋缓  失业率控制不如欧美？](/articles/rfa/1045559.md)
 
 5-19 [强行召开庭前会议   孙大午或面临二十五年重刑](/articles/rfa/1045560.md)
-
-5-19 [助人翻墙遭遇取保候审：一位旅韩中国学生的故事](/articles/rfa/1045561.md)
 
