--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-23 [敏感大事接接踵而至 中国考虑延长边境管控一年](/articles/voa/1039971.md)
+
+6-23 [人权报告：中国存在“广泛而系统的”的国家绑架行为](/articles/voa/1039972.md)
+
 6-22 [字节跳动创始人张一鸣辞职避险 捐款5亿元人民币推动家乡教育](/articles/voa/1039973.md)
 
 6-22 [壹传媒资产被冻结 苹果面临停刊 报禁时代或降临香港](/articles/voa/1039974.md)
@@ -596,8 +600,4 @@
 6-9 [普京加紧镇压，反对派人士流亡被捕 再有独立媒体歇业](/articles/voa/1040269.md)
 
 6-9 [台湾力保芯片工业，高科技员工优先接种疫苗](/articles/voa/1040270.md)
-
-6-8 [中国承诺继续向东盟提供疫苗，美国加大疫苗援外力度](/articles/voa/1040271.md)
-
-6-8 [经济遭受重创之际，朝鲜领导人金正恩与高级顾问谈“实质变革”](/articles/voa/1040272.md)
 
