--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-23 [朝鲜高官金与正讥讽美高官复谈建议](/articles/voa/1039970.md)
+
 6-23 [敏感大事接接踵而至 中国考虑延长边境管控一年](/articles/voa/1039971.md)
 
 6-23 [人权报告：中国存在“广泛而系统的”的国家绑架行为](/articles/voa/1039972.md)
@@ -598,6 +600,4 @@
 6-9 [美国国会及行政当局中国委员会就苹果公司与新疆问题发表声明](/articles/voa/1040268.md)
 
 6-9 [普京加紧镇压，反对派人士流亡被捕 再有独立媒体歇业](/articles/voa/1040269.md)
-
-6-9 [台湾力保芯片工业，高科技员工优先接种疫苗](/articles/voa/1040270.md)
 
