--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-23 [旧闻评论｜舆论手札：拷问“求仁得仁”](/articles/cdt/381187.md)
+
+6-23 [自由亚洲 | “保护卫士”发布最新图像报告：揭露中国RSDL秘密监狱](/articles/cdt/381188.md)
+
 6-22 [moonintokyoIV｜一份即将消失的报纸的记者自述](/articles/cdt/381196.md)
 
 6-22 [【异闻观止】北京大学召开学习习近平重要回信精神专题会](/articles/cdt/381203.md)
@@ -596,8 +600,4 @@
 5-18 [小晖原创 | 呦呦鹿鸣已经失踪两个月了](/articles/cdt/382469.md)
 
 5-18 [驯荒记 | 我一次又一次陪着坠楼学生的亲人陷入循环](/articles/cdt/382470.md)
-
-5-17 [丁香医生｜为一个更加包容的世界努力，这关乎每一个人生存的尊严](/articles/cdt/382474.md)
-
-5-17 [偶尔治愈｜一种不存在的疾病，在中国被治疗了二十年](/articles/cdt/382476.md)
 
