--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-23 [一只猫的折叠花筒 | 质疑高校“非升即走”成思想钳制，留德海归博士吴强起诉清华大学](/articles/cdt/381182.md)
+
+6-23 [德国之声 | 屏蔽多个帐号  领英中国称依法执行](/articles/cdt/381184.md)
+
 6-23 [旧闻评论｜舆论手札：拷问“求仁得仁”](/articles/cdt/381187.md)
 
 6-23 [自由亚洲 | “保护卫士”发布最新图像报告：揭露中国RSDL秘密监狱](/articles/cdt/381188.md)
@@ -596,8 +600,4 @@
 5-18 [【网络民议】全国一季度离婚人数大跌七成多  网友：取消离婚还能降到0](/articles/cdt/382440.md)
 
 5-18 [麦迪讯 | 社论：记一次有必要的失误——由成都四十九中事件所想到的](/articles/cdt/382463.md)
-
-5-18 [小晖原创 | 呦呦鹿鸣已经失踪两个月了](/articles/cdt/382469.md)
-
-5-18 [驯荒记 | 我一次又一次陪着坠楼学生的亲人陷入循环](/articles/cdt/382470.md)
 
