--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-23 [【网络民议】燕山大学石油专业教授称已推翻爱因斯坦相对论](/articles/cdt/381180.md)
+
 6-23 [一只猫的折叠花筒 | 质疑高校“非升即走”成思想钳制，留德海归博士吴强起诉清华大学](/articles/cdt/381182.md)
 
 6-23 [德国之声 | 屏蔽多个帐号  领英中国称依法执行](/articles/cdt/381184.md)
@@ -598,6 +600,4 @@
 5-18 [娱乐有意思｜躺平，不消费，不社交，不结婚，年轻人的另类抵抗](/articles/cdt/382438.md)
 
 5-18 [【网络民议】全国一季度离婚人数大跌七成多  网友：取消离婚还能降到0](/articles/cdt/382440.md)
-
-5-18 [麦迪讯 | 社论：记一次有必要的失误——由成都四十九中事件所想到的](/articles/cdt/382463.md)
 
