--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-23 [伊朗国家新闻网站显示其被美国政府没收](/articles/voa/1039961.md)
+
+6-23 [众议院共和党领袖提出在新冠问题上对中共问责的路线图](/articles/voa/1039962.md)
+
+6-23 [澳大利亚强烈反对联合国计划在中国主办的世遗会上将大堡礁划归“濒危”](/articles/voa/1039963.md)
+
 6-23 [拜登政府牵头重塑供应链 实施效果待考验](/articles/voa/1039964.md)
 
 6-23 [美司法部宣布打击非法枪支贩运计划](/articles/voa/1039965.md)
@@ -594,10 +600,4 @@
 6-9 [法国总统访问南部地区时被扇耳光](/articles/voa/1040259.md)
 
 6-9 [支持香港人民：加拿大为港人申请枫叶卡开通两项新途径](/articles/voa/1040260.md)
-
-6-9 [“波斯尼亚屠夫”姆拉迪奇上诉遭驳回，联合国法庭维持终身监禁原判](/articles/voa/1040261.md)
-
-6-9 [博明建议国会成立跨党派委员会追查新冠源头](/articles/voa/1040262.md)
-
-6-9 [罗马尼亚议会批准新法 可能将华为排除在其5G网络之外](/articles/voa/1040263.md)
 
