--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+6-23 [比特币自1月以来首次跌破3万美元](/articles/ft/1045440.md)
+
+6-23 [全球“流动性盛宴”面临终结](/articles/ft/1045441.md)
+
+6-23 [香港应为SPAC“协办单位”](/articles/ft/1045442.md)
+
 6-22 [改革“土地出让金”征管渠道是试探一步](/articles/ft/1045443.md)
 
 6-22 [骄傲月营销的东西对比与避雷针秘籍](/articles/ft/1045444.md)
@@ -594,10 +600,4 @@
 4-19 [如何讲述春节的故事](/articles/ft/1045738.md)
 
 4-19 [一周世界舆论聚焦：国际局势要求中国重塑国际友好形象](/articles/ft/1045739.md)
-
-4-19 [《我的姐姐》不该只有性别视角](/articles/ft/1045740.md)
-
-4-19 [Oracle诉Google侵权案的高院终审判决：您关心的都在这里](/articles/ft/1045741.md)
-
-4-19 [货币政策正常化会否提速？从通胀说起](/articles/ft/1045742.md)
 
