--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-23 [5G禁令合法 瑞典驳回华为诉讼](/articles/dw/1041790.md)
+
+6-23 [中加联合国人权理事会交锋 互批种族问题](/articles/dw/1041791.md)
+
 6-22 [德语媒体：对华政策上，欧美难以取得共识](/articles/dw/1041792.md)
 
 6-22 [专家：联盟党告别默克尔的对华政策](/articles/dw/1041793.md)
@@ -596,8 +600,4 @@
 6-6 [新冠危机：防疫成功是怎样变得危险起来的](/articles/dw/1042088.md)
 
 6-6 [中国加入卫星互联网竞争 近地轨道趋向饱和](/articles/dw/1042089.md)
-
-6-6 [中国需求增加 加剧原材料供不应求](/articles/dw/1042090.md)
-
-6-6 [英国校园里的“性侵文化”](/articles/dw/1042091.md)
 
