--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-23 [中美技术对抗下的欧盟: 左右为难还是左右逢源](/articles/ft/1045439.md)
+
 6-23 [比特币自1月以来首次跌破3万美元](/articles/ft/1045440.md)
 
 6-23 [全球“流动性盛宴”面临终结](/articles/ft/1045441.md)
@@ -598,6 +600,4 @@
 4-20 [10年期美债利率，能决定中国资产价格吗？](/articles/ft/1045737.md)
 
 4-19 [如何讲述春节的故事](/articles/ft/1045738.md)
-
-4-19 [一周世界舆论聚焦：国际局势要求中国重塑国际友好形象](/articles/ft/1045739.md)
 
