--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-23 [美国会共和党人施压中国配合新冠溯源调查 新制裁直指中科院](/articles/voa/1039955.md)
+
 6-23 [纽约市长初选落幕 杨安泽选情难料](/articles/voa/1039956.md)
 
 6-23 [走了崔天凯来了秦刚？美中外交或将出现更多碰撞](/articles/voa/1039957.md)
@@ -598,6 +600,4 @@
 6-9 [“战狼外交”深植中共 马丁：中国外交官更多的是吓人，不是可爱](/articles/voa/1040253.md)
 
 6-9 [美参议院通过抗衡中国的一揽子法案](/articles/voa/1040254.md)
-
-6-9 [纽约市长选情激烈 杨安泽民调落居第二](/articles/voa/1040255.md)
 
