--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-23 [最后一版 香港《苹果日报》本周绝响](/articles/voa/1039954.md)
+
 6-23 [美国会共和党人施压中国配合新冠溯源调查 新制裁直指中科院](/articles/voa/1039955.md)
 
 6-23 [纽约市长初选落幕 杨安泽选情难料](/articles/voa/1039956.md)
@@ -598,6 +600,4 @@
 6-9 [美参议院公布国会冲击案报告，强调情报和安保疏失](/articles/voa/1040252.md)
 
 6-9 [“战狼外交”深植中共 马丁：中国外交官更多的是吓人，不是可爱](/articles/voa/1040253.md)
-
-6-9 [美参议院通过抗衡中国的一揽子法案](/articles/voa/1040254.md)
 
