--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-23 [《苹果日报》即日停刊 主笔李平被捕](/articles/dw/1041785.md)
+
+6-23 [客座评论：跑了潘石屹没啥 挖不来人才糟](/articles/dw/1041786.md)
+
 6-23 [BioNTech：我们的疫苗对Delta变异毒株有效](/articles/dw/1041787.md)
 
 6-23 [布林肯访问欧洲多国 加强美欧盟友关系](/articles/dw/1041788.md)
@@ -596,8 +600,4 @@
 6-6 [特朗普“重出江湖” 炮轰中国 暗示再次参选](/articles/dw/1042083.md)
 
 6-6 [为殖民罪行赔偿：付钱即可？](/articles/dw/1042084.md)
-
-6-6 [居家办公：身份地位新象征？](/articles/dw/1042085.md)
-
-6-6 [一切均无法遁形：上海 “城市大脑 “火眼金睛](/articles/dw/1042086.md)
 
