--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-23 [No Rights! No Games! 台湾16团体呼吁抵制北京冬奥](/articles/rfa/1045252.md)
+
 6-23 [驻美大使崔天凯卸任 继任者会是“战狼”吗？](/articles/rfa/1045253.md)
 
 6-23 [与武毒所合作密切的德萨克决定回避溯源工作](/articles/rfa/1045254.md)
@@ -598,6 +600,4 @@
 5-20 [中国男足备战世界杯 不忘加强党史教育](/articles/rfa/1045550.md)
 
 5-20 [疫情造成加拿大2.5万人死亡  向中国追责声浪不断](/articles/rfa/1045551.md)
-
-5-20 [美舰再航行台海 美日法澳军演 中国军舰越冲绳](/articles/rfa/1045552.md)
 
