--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-23 [端传媒｜《苹果日报》，香港最后一份异议报纸的终结](/articles/cdt/381166.md)
+
 6-23 [BBC｜香港《苹果日报》停刊：这意味着什么？](/articles/cdt/381169.md)
 
 6-23 [【网络民议】燕山大学石油专业教授称已推翻爱因斯坦相对论](/articles/cdt/381180.md)
@@ -598,6 +600,4 @@
 5-18 [全现在｜他们寻找江绪林，就是在寻找自己](/articles/cdt/382420.md)
 
 5-18 [【立此存照】共青团中央出品：榜样青年演讲节目《与世界说》](/articles/cdt/382437.md)
-
-5-18 [娱乐有意思｜躺平，不消费，不社交，不结婚，年轻人的另类抵抗](/articles/cdt/382438.md)
 
