--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-23 [回国难、回国后也难——海外华人的无奈与乡愁](/articles/dw/1041777.md)
+
 6-23 [当今中共权力圈，女性依然寥寥无几](/articles/dw/1041778.md)
 
 6-23 [《苹果日报》末日前夕   三名记者的自白](/articles/dw/1041779.md)
@@ -598,6 +600,4 @@
 6-7 [德国爆口罩丑闻 卫生部长遭围剿](/articles/dw/1042075.md)
 
 6-7 [中国拼疫苗研发 21款进入临床试验](/articles/dw/1042076.md)
-
-6-7 [广东疫情持续延烧 政府严防人员流动](/articles/dw/1042077.md)
 
