--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-23 [苹果日报主笔被抓，“天亮尿床”警示走红网络](/articles/voa/1039950.md)
+
+6-23 [港版国安法首案开审 被告对所有指控拒绝认罪](/articles/voa/1039951.md)
+
 6-23 [澳为葡萄酒关税上告世贸 澳中对话恐难重启](/articles/voa/1039952.md)
 
 6-23 [美海军第七舰队再次穿越台湾海峡](/articles/voa/1039953.md)
@@ -596,8 +600,4 @@
 6-9 [为中共建党百年献礼 第五代导演率先奏响官方主旋律](/articles/voa/1040248.md)
 
 6-9 [美副防长：新财年国防预算为应对中国威胁提供适当资源](/articles/voa/1040249.md)
-
-6-9 [五角大楼报告：中国主导战略和关键物资全球供应链对美国风险大](/articles/voa/1040250.md)
-
-6-9 [“来自美国的爱” 美议员呼吁提供台湾更多疫苗](/articles/voa/1040251.md)
 
