--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-23 [德国一周大小事](/articles/dw/1041775.md)
+
+6-23 [德语媒体：面对西方压力习近平为何不为之所动？](/articles/dw/1041776.md)
+
 6-23 [回国难、回国后也难——海外华人的无奈与乡愁](/articles/dw/1041777.md)
 
 6-23 [当今中共权力圈，女性依然寥寥无几](/articles/dw/1041778.md)
@@ -596,8 +600,4 @@
 6-7 [客座评论：中国青年的愤怒](/articles/dw/1042073.md)
 
 6-7 [中国与东盟建立对话30周年：东南亚对中态度为何？](/articles/dw/1042074.md)
-
-6-7 [德国爆口罩丑闻 卫生部长遭围剿](/articles/dw/1042075.md)
-
-6-7 [中国拼疫苗研发 21款进入临床试验](/articles/dw/1042076.md)
 
