--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-24 [岸信夫：中国的国防开支缺乏透明度](/articles/rfi/1027510.md)
+
+6-24 [德联邦工业协会主席：普世人权不是一个内部事务](/articles/rfi/1027511.md)
+
 6-23 [即将卸任 澳高官：中国受不安困扰同时被野心驱动](/articles/rfi/1027512.md)
 
 6-23 [《苹果》结业 香港记协：极度痛心，向坚守同业致敬](/articles/rfi/1027513.md)
@@ -596,8 +600,4 @@
 6-18 [北京暂停港澳驻台机构运作释出什么讯息？ - 台北一周](/articles/rfi/1027808.md)
 
 6-18 [捐疫苗事件峰回路转蔡英文会见捐赠方代表官方强调原厂直送台湾](/articles/rfi/1027809.md)
-
-6-18 [欧国杯 比利时荷兰双双晋级16强 – 法国国际广播电台 - RFI](/articles/rfi/1027810.md)
-
-6-18 [湖北十堰居民区燃气管道爆炸事故 8人被刑拘](/articles/rfi/1027811.md)
 
