--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-24 [伊核协议：伊朗官员称美国已同意取消石油和航运制裁](/articles/rfi/1027505.md)
+
+6-24 [西班牙特赦 9名加泰隆尼亚分离主义分子获释 – 法国国际广播电台 - RFI](/articles/rfi/1027506.md)
+
 6-24 [美国务院官员：布林肯与王毅未计划下周在G20会谈](/articles/rfi/1027507.md)
 
 6-24 [德国举办第二次利比亚问题国际会议](/articles/rfi/1027508.md)
@@ -596,8 +600,4 @@
 6-18 [亚股走势分歧 – 法国国际广播电台 - RFI](/articles/rfi/1027803.md)
 
 6-18 [台湾闹缺水电 却正逢须努力供全球芯片紧急需求 - 今日经济](/articles/rfi/1027804.md)
-
-6-18 [莫斯科染疫人数锐增 关闭欧国杯球迷专区 – 法国国际广播电台 - RFI](/articles/rfi/1027805.md)
-
-6-18 [香港媒体自由坠落深渊 - 法国报纸摘要](/articles/rfi/1027806.md)
 
