--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-24 [美国：共和党在参议院阻扰选举改革](/articles/rfi/1027504.md)
+
 6-24 [伊核协议：伊朗官员称美国已同意取消石油和航运制裁](/articles/rfi/1027505.md)
 
 6-24 [西班牙特赦 9名加泰隆尼亚分离主义分子获释 – 法国国际广播电台 - RFI](/articles/rfi/1027506.md)
@@ -598,6 +600,4 @@
 6-18 [日银将支援气候变迁领域投融资  拚2050碳中和 – 法国国际广播电台 - RFI](/articles/rfi/1027802.md)
 
 6-18 [亚股走势分歧 – 法国国际广播电台 - RFI](/articles/rfi/1027803.md)
-
-6-18 [台湾闹缺水电 却正逢须努力供全球芯片紧急需求 - 今日经济](/articles/rfi/1027804.md)
 
