--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-24 [中共严密保安中准备百年党庆 天安门广场封闭周边管制](/articles/voa/1039943.md)
+
+6-24 [特鲁多批北京：连存在侵犯人权的现象都不敢承认](/articles/voa/1039944.md)
+
+6-24 [时事大家谈: 新一波疫情溯源直指武汉，北京备受压力？](/articles/voa/1039945.md)
+
 6-24 [苹果日报被迫停刊 国际反应强烈](/articles/voa/1039946.md)
 
 6-24 [消息人士：拜登政府认为现在是与北京对话的时候了](/articles/voa/1039947.md)
@@ -594,10 +600,4 @@
 6-10 [白宫取消特朗普总统禁止抖音和微信的行政命令](/articles/voa/1040241.md)
 
 6-10 [美制裁华为力度加大 摩根大通将其债券剔出投资指数](/articles/voa/1040242.md)
-
-6-10 [东京奥运前 印度奥运协会解除与李宁公司官方合作伙伴关系](/articles/voa/1040243.md)
-
-6-10 [中国通胀压力大 PPI指数5月高位增长直逼13年最高点](/articles/voa/1040244.md)
-
-6-9 [六四敏感期爆学潮 江浙大学生抗议文凭贬值](/articles/voa/1040245.md)
 
