--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,7 +5,7 @@
 
 6-24 [【立此存照】警惕两面狼口误吐心声，毫无保留分享“反共经验”](/articles/cdt/381158.md)
 
-6-24 [【网络民议】街上没了游行，维园没了灯光，报摊没了苹果](/articles/cdt/381162.md)
+6-24 [【网络民议】街上没了游行，维园没了烛光，报摊没了苹果](/articles/cdt/381162.md)
 
 6-23 [端传媒｜《苹果日报》，香港最后一份异议报纸的终结](/articles/cdt/381166.md)
 
