--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-24 [德国之声 |《苹果日报》末日前夕  三名记者的自白](/articles/cdt/381146.md)
+
 6-24 [【立此存照】警惕两面狼口误吐心声，毫无保留分享“反共经验”](/articles/cdt/381158.md)
 
 6-24 [【网络民议】街上没了游行，维园没了烛光，报摊没了苹果](/articles/cdt/381162.md)
@@ -598,6 +600,4 @@
 5-18 [【网络民议】有的人出生就在罗马，有的人出生就是骡马](/articles/cdt/382415.md)
 
 5-18 [骚客文艺｜别被鲁迅骗了——躺平吧，别去走路](/articles/cdt/382416.md)
-
-5-18 [兽楼处｜反对者的四十年](/articles/cdt/382418.md)
 
