--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+6-24 [四十四国吁联合国调查新疆   美媒揭露中共虚假新疆宣传](/articles/rfa/1045243.md)
+
+6-24 [中国或延长疫情边控  美国会欲迫使中国接受溯源调查](/articles/rfa/1045244.md)
+
 6-24 [有法无用  新疆强迫劳动商品仍持续进入加拿大](/articles/rfa/1045245.md)
 
 6-24 [瑞典维持排除华为禁令  罗马尼亚新法禁止华为参与5G建设](/articles/rfa/1045246.md)
@@ -596,8 +600,4 @@
 5-20 [蔡英文五二零未发表谈话 视察国军指示贯彻防疫维持战备](/articles/rfa/1045541.md)
 
 5-20 [台湾邦交国洪都拉斯威胁美国不给疫苗就断交](/articles/rfa/1045542.md)
-
-5-20 [张一鸣卸任“字节跳动”CEO   创办人弃船惹民众猜疑](/articles/rfa/1045543.md)
-
-5-20 [美众院通过反仇亚法案    区分亚裔及中共成为课题](/articles/rfa/1045544.md)
 
