--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+6-24 [纽约州长宣布该州新冠疫情紧急状态于周四结束](/articles/voa/1039939.md)
+
+6-24 [美国太平洋西北地区面临危险热浪](/articles/voa/1039940.md)
+
+6-24 [密歇根共和党人驳回特朗普有关选举舞弊的指称](/articles/voa/1039941.md)
+
+6-24 [啦啦队员校外骂脏话学校要管？美最高法院判决：不能](/articles/voa/1039942.md)
+
 6-24 [中共严密保安中准备百年党庆 天安门广场封闭周边管制](/articles/voa/1039943.md)
 
 6-24 [特鲁多批北京：连存在侵犯人权的现象都不敢承认](/articles/voa/1039944.md)
@@ -592,12 +600,4 @@
 6-10 [香港青年组织义卖活动纪念反送中两周年 盼重新连结港人战胜白色恐怖](/articles/voa/1040237.md)
 
 6-10 [阿尔巴尼亚议会弹劾总统](/articles/voa/1040238.md)
-
-6-10 [时事大家谈: 欧盟涉华议案再被一票否决，中国当喜当忧？](/articles/voa/1040239.md)
-
-6-10 [保护记者委员会呼吁中国政府立即释放吕耿松](/articles/voa/1040240.md)
-
-6-10 [白宫取消特朗普总统禁止抖音和微信的行政命令](/articles/voa/1040241.md)
-
-6-10 [美制裁华为力度加大 摩根大通将其债券剔出投资指数](/articles/voa/1040242.md)
 
