--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-24 [美情报总监：新冠病毒来源可能永远不为人所知](/articles/voa/1039938.md)
+
 6-24 [纽约州长宣布该州新冠疫情紧急状态于周四结束](/articles/voa/1039939.md)
 
 6-24 [美国太平洋西北地区面临危险热浪](/articles/voa/1039940.md)
@@ -598,6 +600,4 @@
 6-10 [白宫记者团跟随拜登访欧，专机遭蝉“阻挠”致航班延误](/articles/voa/1040236.md)
 
 6-10 [香港青年组织义卖活动纪念反送中两周年 盼重新连结港人战胜白色恐怖](/articles/voa/1040237.md)
-
-6-10 [阿尔巴尼亚议会弹劾总统](/articles/voa/1040238.md)
 
