--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-24 [新加坡将接收一批复必泰疫苗](/articles/rfi/1027492.md)
+
+6-24 [法国世界报：华盛顿组织与中国的正面冲突，巴黎不想参与 - 法国世界报](/articles/rfi/1027493.md)
+
 6-24 [苹果Podcasts推全新订阅制 10元起享无广告、独家内容](/articles/rfi/1027494.md)
 
 6-24 [6月24日最后一份的《苹果日报》](/articles/rfi/1027495.md)
@@ -596,8 +600,4 @@
 6-18 [美国加强对个人数据保护 违规中资应用或遭传票、封杀](/articles/rfi/1027790.md)
 
 6-18 [哈尔滨工程大学副校长坠楼身亡](/articles/rfi/1027791.md)
-
-6-18 [美军参联会主席：中国是我们的头号地缘战略安全挑战](/articles/rfi/1027792.md)
-
-6-18 [苹果日报事件 国民、民进两党齐发声关注](/articles/rfi/1027793.md)
 
