--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-24 [《苹果日报》停刊   国安法蚕食香港新闻自由毫不手软](/articles/rfa/1045242.md)
+
 6-24 [四十四国吁联合国调查新疆   美媒揭露中共虚假新疆宣传](/articles/rfa/1045243.md)
 
 6-24 [中国或延长疫情边控  美国会欲迫使中国接受溯源调查](/articles/rfa/1045244.md)
@@ -598,6 +600,4 @@
 5-20 [中国钢材价格飞涨  企业员工被迫“休假”](/articles/rfa/1045540.md)
 
 5-20 [蔡英文五二零未发表谈话 视察国军指示贯彻防疫维持战备](/articles/rfa/1045541.md)
-
-5-20 [台湾邦交国洪都拉斯威胁美国不给疫苗就断交](/articles/rfa/1045542.md)
 
