--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-24 [苹果日报 | 林夕：你我要化做萤火虫](/articles/cdt/381143.md)
+
 6-24 [德国之声 |《苹果日报》末日前夕  三名记者的自白](/articles/cdt/381146.md)
 
 6-24 [【立此存照】警惕两面狼口误吐心声，毫无保留分享“反共经验”](/articles/cdt/381158.md)
@@ -598,6 +600,4 @@
 5-19 [【CDT月度人物】服毒自杀的卡车司机金德强：“我用我的死来唤醒领导对这个事情的重视”](/articles/cdt/382401.md)
 
 5-18 [【网络民议】有的人出生就在罗马，有的人出生就是骡马](/articles/cdt/382415.md)
-
-5-18 [骚客文艺｜别被鲁迅骗了——躺平吧，别去走路](/articles/cdt/382416.md)
 
