--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-24 [新疆能源产业被锁定 美列五家中企黑名单](/articles/dw/1041772.md)
+
+6-24 [《苹果日报》熄灯 欧盟批港侵害新闻自由](/articles/dw/1041773.md)
+
 6-23 [“彩虹”继续发酵 匈牙利总理拒来德观赛](/articles/dw/1041774.md)
 
 6-23 [德国一周大小事](/articles/dw/1041775.md)
@@ -596,8 +600,4 @@
 6-7 [德国取消疫苗接种排序：现实依旧很骨感](/articles/dw/1042070.md)
 
 6-7 [美国疫苗送到  蔡英文：感谢拜登政府伸出援手](/articles/dw/1042071.md)
-
-6-7 [美参议员乘军机访台捐赠疫苗 北京坚决反对](/articles/dw/1042072.md)
-
-6-7 [客座评论：中国青年的愤怒](/articles/dw/1042073.md)
 
