--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-24 [欧洲疾管中心：Delta变种恐占欧盟新增染疫病例90% – 法国国际广播电台 - RFI](/articles/rfi/1027488.md)
+
 6-24 [拍摄「印第安纳琼斯5」 哈里逊福特打斗戏彩排受伤 – 法国国际广播电台 - RFI](/articles/rfi/1027489.md)
 
 6-24 [特斯拉股价劲扬推动 美股那斯达克指数再创新高 – 法国国际广播电台 - RFI](/articles/rfi/1027490.md)
@@ -598,6 +600,4 @@
 6-18 [美国警告中企参与构成安全威胁 太平洋海底电缆项目搁浅](/articles/rfi/1027786.md)
 
 6-18 [布林肯下周访欧 G20外长会议可能与中俄会谈 – 法国国际广播电台 - RFI](/articles/rfi/1027787.md)
-
-6-18 [百万剂辉瑞疫苗快过期  以色列赠与巴勒斯坦 – 法国国际广播电台 - RFI](/articles/rfi/1027788.md)
 
