--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-24 [简报：《苹果日报》被迫停刊；中国政治宣传运动中的新疆生活](/articles/nyt/1046688.md)
+
 6-23 [新冠病毒来自于实验室吗？](/articles/nyt/1046689.md)
 
 6-23 [香港《苹果日报》将停止运营](/articles/nyt/1046690.md)
@@ -598,6 +600,4 @@
 4-9 [纽约亚裔成立民间巡逻队保护社区](/articles/nyt/1046986.md)
 
 4-9 [简报：美国强势支持台湾；七家中国超级计算机公司被制裁](/articles/nyt/1046987.md)
-
-4-8 [拜登政府强势支持台湾，是时候放弃“战略模糊”了吗？](/articles/nyt/1046988.md)
 
