--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+6-24 [朝鲜外务相李善权称 朝鲜没在考虑与美国进行任何接触--朝中社](/articles/reuters/1036530.md)
+
+6-24 [亚股原地踏步 市场关注美国通胀信号](/articles/reuters/1036531.md)
+
+6-24 [中国银保监会官员：通胀很可能不是短期的 预计下个月中国PPI可能会到10%](/articles/reuters/1036532.md)
+
+6-24 [长赐号堵塞苏伊士运河纠纷达成原则性协议 赔偿金额暂未知](/articles/reuters/1036533.md)
+
 6-24 [维多公司扩展中国船用燃料业务 在上海洋山港提供海上加油服务](/articles/reuters/1036534.md)
 
 6-24 [综述：美联储官员称通胀“暂时”急升的状况或将持续比之前预估更长的时间](/articles/reuters/1036535.md)
@@ -592,12 +600,4 @@
 6-16 [分析：是过客还是归人？投资者试图解读通胀线索](/articles/reuters/1036828.md)
 
 6-16 [中国详解台山核电站“究竟发生了什么” 称CNN报导不属实、有关概念错误](/articles/reuters/1036829.md)
-
-6-16 [独家：PAI Partners接近从中国建投手中收购法国SGD Pharma--消息人士](/articles/reuters/1036830.md)
-
-6-16 [独家：通用汽车将提高电动汽车支出30% 并新建两座电池厂--消息人士](/articles/reuters/1036831.md)
-
-6-16 [大众汽车找队友合打电池材料战 巩固供应链防线](/articles/reuters/1036832.md)
-
-6-16 [道富环球削减全球股市持仓 担忧市场太放心通胀与升息风险](/articles/reuters/1036833.md)
 
