--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-24 [匈牙利反同法案为欧盟峰会蒙上阴影](/articles/dw/1041771.md)
+
 6-24 [新疆能源产业被锁定 美列五家中企黑名单](/articles/dw/1041772.md)
 
 6-24 [《苹果日报》熄灯 欧盟批港侵害新闻自由](/articles/dw/1041773.md)
@@ -598,6 +600,4 @@
 6-7 [复旦分校之争：匈牙利或搁置建设计划](/articles/dw/1042069.md)
 
 6-7 [德国取消疫苗接种排序：现实依旧很骨感](/articles/dw/1042070.md)
-
-6-7 [美国疫苗送到  蔡英文：感谢拜登政府伸出援手](/articles/dw/1042071.md)
 
