--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-24 [《中国在梁庄》：如何摧毁一个村庄](/articles/nyt/1046686.md)
+
 6-24 [香港的新闻自由是如何被一步步侵蚀的](/articles/nyt/1046687.md)
 
 6-24 [简报：《苹果日报》被迫停刊；中国政治宣传运动中的新疆生活](/articles/nyt/1046688.md)
@@ -598,6 +600,4 @@
 4-9 [美情报官员警告全球秩序趋向分裂](/articles/nyt/1046984.md)
 
 4-9 [干旱危机中的台湾：保芯片厂供水，停农田灌溉](/articles/nyt/1046985.md)
-
-4-9 [纽约亚裔成立民间巡逻队保护社区](/articles/nyt/1046986.md)
 
