--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-24 [白宫宣布就基建计划达成“潜在协议”](/articles/ft/1045433.md)
+
 6-24 [TikTok为什么在欧洲年轻人中受欢迎](/articles/ft/1045434.md)
 
 6-24 [巴菲特辞任盖茨基金会受托人一职](/articles/ft/1045435.md)
@@ -598,6 +600,4 @@
 4-20 [Facebook进军音频领域](/articles/ft/1045731.md)
 
 4-20 [英国将推出更雄心勃勃的气候目标](/articles/ft/1045732.md)
-
-4-20 [从狗狗币“奔月”看赌民化社会](/articles/ft/1045733.md)
 
