--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-24 [中共在台湾：蔡孝乾与昙花一现的台共组织](/articles/dw/1041770.md)
+
 6-24 [匈牙利反同法案为欧盟峰会蒙上阴影](/articles/dw/1041771.md)
 
 6-24 [新疆能源产业被锁定 美列五家中企黑名单](/articles/dw/1041772.md)
@@ -598,6 +600,4 @@
 6-7 [广东疫情持续延烧 人员流动严格受限](/articles/dw/1042068.md)
 
 6-7 [复旦分校之争：匈牙利或搁置建设计划](/articles/dw/1042069.md)
-
-6-7 [德国取消疫苗接种排序：现实依旧很骨感](/articles/dw/1042070.md)
 
