--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-24 [布林肯：德国是美国“最好的朋友”](/articles/dw/1041767.md)
+
+6-24 [《苹果日报》关闭：香港新闻自由进入寒冬 「反对声音」从主流消失](/articles/dw/1041768.md)
+
+6-24 [赵婷: 电影界明显存在性别歧视、种族歧视](/articles/dw/1041769.md)
+
 6-24 [中共在台湾：蔡孝乾与昙花一现的台共组织](/articles/dw/1041770.md)
 
 6-24 [匈牙利反同法案为欧盟峰会蒙上阴影](/articles/dw/1041771.md)
@@ -594,10 +600,4 @@
 6-7 [中国5月进口激增 出口低于预期](/articles/dw/1042065.md)
 
 6-7 [德国经典：布谷鸟钟](/articles/dw/1042066.md)
-
-6-7 [雅各布·凡·艾克：“睡吧，甜蜜地睡吧”与“夜莺”](/articles/dw/1042067.md)
-
-6-7 [广东疫情持续延烧 人员流动严格受限](/articles/dw/1042068.md)
-
-6-7 [复旦分校之争：匈牙利或搁置建设计划](/articles/dw/1042069.md)
 
