--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-24 [“出走”的大象与一场中国互联网狂欢](/articles/nyt/1046684.md)
+
 6-24 [科学家恢复被删除的早期新冠病毒基因序列](/articles/nyt/1046685.md)
 
 6-24 [《中国在梁庄》：如何摧毁一个村庄](/articles/nyt/1046686.md)
@@ -598,6 +600,4 @@
 4-9 [食道癌患者迎来治疗新方案，可使无病生存时间翻倍](/articles/nyt/1046982.md)
 
 4-9 [“拜登经济学”能赢过中国吗](/articles/nyt/1046983.md)
-
-4-9 [美情报官员警告全球秩序趋向分裂](/articles/nyt/1046984.md)
 
