--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,28 @@
 法广
 ------
 
+6-24 [美研究人员依照中方要求删除包括武汉早期新冠病例的病毒基因序列](/articles/rfi/1027461.md)
+
+6-24 [美国凶杀案激增 拜登剑指售枪坏蛋](/articles/rfi/1027462.md)
+
+6-24 [日股收盘近乎持平 – 法国国际广播电台 - RFI](/articles/rfi/1027463.md)
+
+6-24 [英央行可望维持历史低档利率 欧股开高 – 法国国际广播电台 - RFI](/articles/rfi/1027464.md)
+
+6-24 [中国计划在2033年进行首次载人火星探测](/articles/rfi/1027465.md)
+
+6-24 [菲律宾前总统阿基诺三世辞世](/articles/rfi/1027466.md)
+
+6-24 [亚洲多国公开就七国集团应对中方“一带一路”政策表达欢迎](/articles/rfi/1027467.md)
+
+6-24 [C罗国际赛进球平史上纪录 葡萄牙逼和法国晋级 – 法国国际广播电台 - RFI](/articles/rfi/1027468.md)
+
+6-24 [克劳森伤停补时绝杀 瑞典晋级欧国杯16强 – 法国国际广播电台 - RFI](/articles/rfi/1027469.md)
+
+6-24 [格列茨卡最后扳平 欧国杯德国惊险晋级16强 – 法国国际广播电台 - RFI](/articles/rfi/1027470.md)
+
+6-24 [欧国杯西班牙及时回神 大胜斯洛伐克晋级16强 – 法国国际广播电台 - RFI](/articles/rfi/1027471.md)
+
 6-24 [孙杨案半翻盘 禁赛期减半 ”中国的骄傲“落入国际斗争的泥淖？](/articles/rfi/1027472.md)
 
 6-24 [日本官房长官对《苹果日报》停刊表示严重关注](/articles/rfi/1027473.md)
@@ -578,26 +600,4 @@
 6-19 [世卫：Delta正成为主流病毒株 已扩散到超80国且持续突变](/articles/rfi/1027759.md)
 
 6-19 [阿斯利康疫苗在台接种后53人猝死  在台日本人担心台湾对日感情恶化](/articles/rfi/1027760.md)
-
-6-19 [76人3人破20分 逼老鹰第7战决胜 – 法国国际广播电台 - RFI](/articles/rfi/1027761.md)
-
-6-19 [美减少派驻中东部队与飞弹连兵力 – 法国国际广播电台 - RFI](/articles/rfi/1027762.md)
-
-6-19 [谴责政变，联合国大会罕见通过决议 呼吁“防止武器流入”缅甸](/articles/rfi/1027763.md)
-
-6-19 [「反修例」元朗站7.21暴动案 五名有势力人士罪成 控方表现争议未息](/articles/rfi/1027764.md)
-
-6-19 [《苹果》两高层及三公司被控违反国安法 首有公司被控 还柙8月再讯](/articles/rfi/1027765.md)
-
-6-19 [中国对葡萄酒祭反倾销税 澳洲决定正式告上世贸 – 法国国际广播电台 - RFI](/articles/rfi/1027766.md)
-
-6-19 [NBA季后赛次轮 76人扳平老鹰 – 法国国际广播电台 - RFI](/articles/rfi/1027767.md)
-
-6-19 [国安法对媒体激进应用——纽约时报报道港府搜查苹果日报逮捕报人](/articles/rfi/1027768.md)
-
-6-19 [美团执行长王兴遭约谈 皆因习近平疑心重？](/articles/rfi/1027769.md)
-
-6-19 [亚美尼亚 :纳卡失利后提前立法选举](/articles/rfi/1027770.md)
-
-6-19 [疫苗即将过期 巴勒斯坦取消以色列捐赠疫苗协议 – 法国国际广播电台 - RFI](/articles/rfi/1027771.md)
 
