--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-24 [【404文库】岛读世界｜大批香港市民排队购买最后一期苹果报纸](/articles/cdt/381103.md)
+
+6-24 [中国数字时代上的【苹果日报】](/articles/cdt/381107.md)
+
 6-24 [【404档案馆】CDT播客第7期：血案背后的复旦：中国高校的缩影](/articles/cdt/381137.md)
 
 6-24 [【404档案馆】CDT播客第8期：一个苹果掉下去，千万个苹果长出来](/articles/cdt/381141.md)
@@ -596,8 +600,4 @@
 5-19 [叫虱｜这也叫意识形态问题？你查一查字典好吗？](/articles/cdt/382389.md)
 
 5-19 [【旧闻重温】十点公社 | 北大教授：这个世界，坏人已经联合起来了](/articles/cdt/382396.md)
-
-5-19 [导筒现场 | 被豆瓣电影删除的威尼斯获奖影片《亲爱的同志》](/articles/cdt/382397.md)
-
-5-19 [【CDT推荐】本周推荐媒体](/articles/cdt/382398.md)
 
