--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-24 [mRNA疫苗同罕见心肌炎之间可能存在关联](/articles/dw/1041766.md)
+
 6-24 [布林肯：德国是美国“最好的朋友”](/articles/dw/1041767.md)
 
 6-24 [《苹果日报》关闭：香港新闻自由进入寒冬 「反对声音」从主流消失](/articles/dw/1041768.md)
@@ -598,6 +600,4 @@
 6-7 [法国开出2.2亿欧元罚单 谷歌认罚](/articles/dw/1042064.md)
 
 6-7 [中国5月进口激增 出口低于预期](/articles/dw/1042065.md)
-
-6-7 [德国经典：布谷鸟钟](/articles/dw/1042066.md)
 
