--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-24 [原材料价格攀升 中国恐面临输入型通胀压力](/articles/voa/1039926.md)
+
+6-24 [问与答：金德芳谈中国误解美国的中国问题专家学者](/articles/voa/1039927.md)
+
 6-24 [米利：中国希望在今后六年内具备攻占台湾的军事能力](/articles/voa/1039928.md)
 
 6-24 [香港居民难掩悲情抢购最后一期《苹果日报》](/articles/voa/1039929.md)
@@ -596,8 +600,4 @@
 6-10 [当美国忙于安抚欧洲盟友时，中国努力拉拢东盟](/articles/voa/1040224.md)
 
 6-10 [习近平要求加强外宣 分析人士：美国须制定长期应对战略](/articles/voa/1040225.md)
-
-6-10 [五角大楼：研制高超音速武器进度良好](/articles/voa/1040226.md)
-
-6-10 [美联社：关于美国新冠溯源调查有六点要知道的事](/articles/voa/1040227.md)
 
