--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-24 [《苹果日报》对大陆起示范作用    香港人的坚持感动中国网民](/articles/rfa/1045240.md)
+
 6-24 [《香港苹果日报》最后告别 蔡英文推崇是追求自由的滩头堡](/articles/rfa/1045241.md)
 
 6-24 [《苹果日报》停刊   国安法蚕食香港新闻自由毫不手软](/articles/rfa/1045242.md)
@@ -598,6 +600,4 @@
 5-21 [欧洲议会599票赞成   冻结欧中投资协定](/articles/rfa/1045538.md)
 
 5-20 [忧债务庞大 萨摩亚叫停中国一带一路工程](/articles/rfa/1045539.md)
-
-5-20 [中国钢材价格飞涨  企业员工被迫“休假”](/articles/rfa/1045540.md)
 
