--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-24 [【异闻观止】中评社｜香港国安教育进校园疑虑何在？](/articles/cdt/381102.md)
+
 6-24 [【404文库】岛读世界｜大批香港市民排队购买最后一期苹果报纸](/articles/cdt/381103.md)
 
 6-24 [中国数字时代上的【苹果日报】](/articles/cdt/381107.md)
@@ -598,6 +600,4 @@
 5-19 [中国新闻周刊｜曹县究竟是个什么梗？](/articles/cdt/382386.md)
 
 5-19 [叫虱｜这也叫意识形态问题？你查一查字典好吗？](/articles/cdt/382389.md)
-
-5-19 [【旧闻重温】十点公社 | 北大教授：这个世界，坏人已经联合起来了](/articles/cdt/382396.md)
 
