--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-24 [美外交官: 不再视台湾为美中关系中的一个问题](/articles/dw/1041760.md)
+
 6-24 [香港告别《苹果日报》](/articles/dw/1041761.md)
 
 6-24 [德国议院人权委员会: 中国政府在新疆犯下了反人类罪](/articles/dw/1041762.md)
@@ -598,6 +600,4 @@
 6-7 [新冠疫情：普通医用口罩和FFP口罩的功效一样吗？](/articles/dw/1042058.md)
 
 6-7 [阿富汗当地雇员何去何从? 塔利班要其“悔过自新“](/articles/dw/1042059.md)
-
-6-7 [韩法院驳回强征劳工受害者对日企索赔请求](/articles/dw/1042060.md)
 
