--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-25 [军方政变后数百缅甸人被杀  抗议持续不断](/articles/rfa/1045234.md)
+
 6-24 [澳洲多座城市举行大型集会  呼吁全球抵制北京冬奥会](/articles/rfa/1045235.md)
 
 6-24 [中共邀百名台湾人出席百年庆典  台湾警告别以身试法](/articles/rfa/1045236.md)
@@ -598,6 +600,4 @@
 5-21 [继美日共同声明 美韩首脑峰会联合声明将提台湾](/articles/rfa/1045532.md)
 
 5-21 [《港区国安法》下首个六四   港人如何延续烛光？](/articles/rfa/1045533.md)
-
-5-21 [《毛泽东选集》缘何受中国大学生追捧？](/articles/rfa/1045534.md)
 
