--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-25 [开火示警并投放炸弹？俄罗斯与英国就黑海相遇事件相互指责](/articles/voa/1039912.md)
+
+6-25 [美国加速推进转移帮助过美军的成千上万阿富汗人的计划](/articles/voa/1039913.md)
+
 6-25 [纽约法庭暂停朱利安尼律师执照](/articles/voa/1039914.md)
 
 6-25 [香港苹果日报国安法下首家受压关闭媒体 逾千市民凌晨排队抢购停刊号](/articles/voa/1039915.md)
@@ -596,8 +600,4 @@
 6-11 [素来平静的马来西亚为何因海上争端而对中国不满？](/articles/voa/1040210.md)
 
 6-11 [美国准备向全球捐赠5亿剂疫苗 亚洲国家表示欢迎](/articles/voa/1040211.md)
-
-6-11 [美国应对新冠疫情的全球观感大幅改善 但在接受评判国家和组织中仍垫底](/articles/voa/1040212.md)
-
-6-11 [立陶宛立新法禁止侵犯人权和公开为北京宣传的人士入境](/articles/voa/1040213.md)
 
