--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+6-25 [宁波外教杀人案引发对超国民待遇的愤怒](/articles/rfa/1045230.md)
+
+6-25 [《苹果日报》》停刊国际关注   美国总统拜登批评中国打压新闻自由](/articles/rfa/1045231.md)
+
 6-25 [旧金山多族裔游行集会   呼吁抵制北京冬奥会](/articles/rfa/1045232.md)
 
 6-25 [加拿大四大城市串联  抵制北京举办奥运](/articles/rfa/1045233.md)
@@ -596,8 +600,4 @@
 5-22 [港府控台“粗暴干预香港事务”     台陆委会驳斥](/articles/rfa/1045528.md)
 
 5-22 [加拿大作家出书：中国当局在加涉洗钱、毒品和统战渗透](/articles/rfa/1045529.md)
-
-5-21 [台湾疫情加剧  美台卫生部长通话支持台湾获得疫苗](/articles/rfa/1045530.md)
-
-5-21 [武汉弘芯翻版？又见598亿泉芯芯片项目烂尾](/articles/rfa/1045531.md)
 
