--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-25 [默克尔接班人主张不对中国叫板，但多方压力不许他左右逢源](/articles/voa/1039909.md)
+
+6-25 [日本对中国军事意图严重担忧](/articles/voa/1039910.md)
+
 6-25 [迈阿密附近一座海滨大楼倒塌 至少一人死亡 99人下落不明](/articles/voa/1039911.md)
 
 6-25 [开火示警并投放炸弹？俄罗斯与英国就黑海相遇事件相互指责](/articles/voa/1039912.md)
@@ -596,8 +600,4 @@
 6-11 [拜登政府将不要求重返办公室的联邦雇员必须接种新冠疫苗](/articles/voa/1040207.md)
 
 6-11 [皮尤调查：拜登领导下美国全球地位回升](/articles/voa/1040208.md)
-
-6-11 [美国消费者物价5月份蹿升](/articles/voa/1040209.md)
-
-6-11 [素来平静的马来西亚为何因海上争端而对中国不满？](/articles/voa/1040210.md)
 
