--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-25 [很显然，中国大规模拘禁穆斯林可以继续得到巴基斯坦总理的支持 - 法国世界报](/articles/rfi/1027420.md)
+
 6-25 [美国国务卿布林肯警告各国：不要从新疆的强迫劳动产品中获益](/articles/rfi/1027421.md)
 
 6-25 [纽约时报：获得中国疫苗的国家新冠感染不减反增](/articles/rfi/1027422.md)
@@ -598,6 +600,4 @@
 6-20 [聚焦非洲 埃塞尔比亚-提格雷战争与人道危机 - 聚焦非洲](/articles/rfi/1027718.md)
 
 6-20 [恐遭美国天主教团禁领圣体 拜登现身家乡教堂 – 法国国际广播电台 - RFI](/articles/rfi/1027719.md)
-
-6-20 [示威盼民主改革史瓦帝尼爆警民冲突 – 法国国际广播电台 - RFI](/articles/rfi/1027720.md)
 
