--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-25 [拜登称赞两党在基础设施协议上达成妥协](/articles/voa/1039903.md)
+
+6-25 [路透社：太平洋岛国在拒绝华为投标后寻求澳大利亚协助修建海底电缆](/articles/voa/1039904.md)
+
 6-25 [国务卿布林肯将会晤法国总统马克龙](/articles/voa/1039905.md)
 
 6-25 [众议院外委会定于下周审议范围广泛的抗衡中国法案](/articles/voa/1039906.md)
@@ -596,8 +600,4 @@
 6-11 [美财长称担忧债务减免计划可能让中资银行受利](/articles/voa/1040201.md)
 
 6-11 [拜登与约翰逊签署《新大西洋宪章》，聚焦中国](/articles/voa/1040202.md)
-
-6-11 [中俄军费加在一起超过美国防务开支](/articles/voa/1040203.md)
-
-6-11 [欧盟、七国集团领导人支持美国重新调查新冠病毒源头的要求](/articles/voa/1040204.md)
 
