--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-25 [最新压力测试结果 Fed：美大银行能应付经济衰退 – 法国国际广播电台 - RFI](/articles/rfi/1027418.md)
+
 6-25 [朱利安尼就选举提虚假陈述 遭法院暂停法律执照 – 法国国际广播电台 - RFI](/articles/rfi/1027419.md)
 
 6-25 [很显然，中国大规模拘禁穆斯林可以继续得到巴基斯坦总理的支持 - 法国世界报](/articles/rfi/1027420.md)
@@ -598,6 +600,4 @@
 6-20 [中国已注射疫苗10亿剂 有望批准德BioNTech疫苗](/articles/rfi/1027716.md)
 
 6-20 [波音空客休战：联合对付共同对手中国商飞？](/articles/rfi/1027717.md)
-
-6-20 [聚焦非洲 埃塞尔比亚-提格雷战争与人道危机 - 聚焦非洲](/articles/rfi/1027718.md)
 
