--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-25 [研究：新冠病毒比已知更早就开始传播](/articles/dw/1041751.md)
+
+6-25 [日防卫大臣:台湾安全直接影响日本](/articles/dw/1041752.md)
+
 6-25 [反制澳大利亚 中国也向WTO提申诉](/articles/dw/1041753.md)
 
 6-25 [《苹果》售完百万份报纸 拜登吁北京停止压迫媒体](/articles/dw/1041754.md)
@@ -596,8 +600,4 @@
 6-8 [报告：中国在新疆控制生育 料20年内减450万人](/articles/dw/1042049.md)
 
 6-8 [两名中国人在尼日尔遭绑架](/articles/dw/1042050.md)
-
-6-8 [加拿大发生严重种族袭击事件](/articles/dw/1042051.md)
-
-6-8 [美国出手防堵中国在中美洲”有害活动”](/articles/dw/1042052.md)
 
