--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-25 [“小甜甜”布兰妮法庭指控父亲，称被下药、强迫工作](/articles/nyt/1046677.md)
+
 6-25 [迈阿密公寓楼倒塌：99人失踪，楼体原准备维修](/articles/nyt/1046678.md)
 
 6-25 [美国禁止进口部分新疆太阳能产品，指其使用强迫劳工](/articles/nyt/1046679.md)
@@ -598,6 +600,4 @@
 4-12 [现代君主制的奇迹，现代婚姻的奇迹](/articles/nyt/1046975.md)
 
 4-12 [打上马赛克的运动鞋：西方品牌因新疆棉遭中国综艺审查](/articles/nyt/1046976.md)
-
-4-12 [家居绿植美学：把大自然带回家](/articles/nyt/1046977.md)
 
