--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-25 [联合国人权高专办：即便不去新疆也能够拿到维族人遭受迫害的证据](/articles/voa/1039895.md)
+
+6-25 [中共党庆前重大事故防不胜防，河南武术馆火灾酿18死](/articles/voa/1039896.md)
+
 6-25 [香港政府高层改组 保安系统官员掌重权](/articles/voa/1039897.md)
 
 6-25 [国安法一周年前夕 在台港青：曾有那么一刹那 让我怀念起香港](/articles/voa/1039898.md)
@@ -596,8 +600,4 @@
 6-11 [美澳海军完成南中国海联合军演，美舰长强调共同价值观至关重要](/articles/voa/1040193.md)
 
 6-11 [国际特赦组织：对新疆穆斯林大规模迫害构成危害人类罪](/articles/voa/1040194.md)
-
-6-11 [英国报告称香港国安法意在“大幅限制自由”](/articles/voa/1040195.md)
-
-6-11 [日本官员提及台湾出口误，中国官方穷追猛打不留情](/articles/voa/1040196.md)
 
