--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-26 [买盘介入 欧股多数收红 – 法国国际广播电台 - RFI](/articles/rfi/1027367.md)
+
 6-25 [以色列发现前所未知新种早期智人 – 法国国际广播电台 - RFI](/articles/rfi/1027368.md)
 
 6-25 [平安护航建党百年不易 中国6月爆14起重大事故](/articles/rfi/1027369.md)
@@ -598,6 +600,4 @@
 6-21 [中国扩大打击加密货币挖矿 比特币价格跳水 – 法国国际广播电台 - RFI](/articles/rfi/1027665.md)
 
 6-21 [《苹果》可能本周六结业 员工可即日请辞](/articles/rfi/1027666.md)
-
-6-21 [中国疫苗接种破10亿剂 - 法国报纸摘要](/articles/rfi/1027667.md)
 
