--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-26 [中国 :百年中共 - 嘉兴南湖一遍红](/articles/rfi/1027361.md)
+
+6-26 [索马利亚籍男子在德国持刀行凶 3死数伤 – 法国国际广播电台 - RFI](/articles/rfi/1027362.md)
+
+6-26 [德国惊传持刀攻击事件 多人死伤 – 法国国际广播电台 - RFI](/articles/rfi/1027363.md)
+
 6-26 [法国社保局赤字因新冠创历史新高 计划2022节约10亿欧元](/articles/rfi/1027364.md)
 
 6-26 [Covid-19 : 葡萄牙因Delta变异恢复限制](/articles/rfi/1027365.md)
@@ -594,10 +600,4 @@
 6-21 [新冠疫情：印度实施全民免费接种疫苗 莫迪夸赞瑜伽的&quot;保护性 &quot;优点](/articles/rfi/1027659.md)
 
 6-21 [美国高球公开赛封王 西班牙好手拉姆首夺大满贯 – 法国国际广播电台 - RFI](/articles/rfi/1027660.md)
-
-6-21 [出国比赛让理发师进旅馆 智利国足违美洲杯防疫规定 – 法国国际广播电台 - RFI](/articles/rfi/1027661.md)
-
-6-21 [瑞典总理面临挫败 国会通过不信任案 – 法国国际广播电台 - RFI](/articles/rfi/1027662.md)
-
-6-21 [西方敦促伊朗尽快达成核协议](/articles/rfi/1027663.md)
 
