--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,26 @@
 法广
 ------
 
+6-26 [弗洛伊德案： 涉事前警察肖万被判22年6个月刑期](/articles/rfi/1027351.md)
+
+6-26 [拜登称赞两党在基础设施协议上达成妥协](/articles/rfi/1027352.md)
+
+6-26 [对抗北京打压 美议员力推为香港苹果日报员工颁国会金奖](/articles/rfi/1027353.md)
+
+6-26 [4死159人失踪 迈阿密坍塌公寓1年前就下陷](/articles/rfi/1027354.md)
+
+6-26 [法国家暴：为何杀人犯被轻判？](/articles/rfi/1027355.md)
+
+6-26 [美股收红 标普指数创新高 – 法国国际广播电台 - RFI](/articles/rfi/1027356.md)
+
+6-26 [德国维尔茨堡发生持刀伤人事件   3人死亡](/articles/rfi/1027357.md)
+
+6-26 [迫降客机事件：欧盟对白俄罗斯实施经济制裁](/articles/rfi/1027358.md)
+
+6-26 [欧盟领袖峰会落幕 高度警惕病毒变种传播](/articles/rfi/1027359.md)
+
+6-26 [《苹果日报》将永远是“唯一一家真正讲真话的报纸” - 法国世界报](/articles/rfi/1027360.md)
+
 6-26 [中国 :百年中共 - 嘉兴南湖一遍红](/articles/rfi/1027361.md)
 
 6-26 [索马利亚籍男子在德国持刀行凶 3死数伤 – 法国国际广播电台 - RFI](/articles/rfi/1027362.md)
@@ -580,24 +600,4 @@
 6-21 [高敬文 : 西方面临中共的强大挑战](/articles/rfi/1027649.md)
 
 6-21 [阿联酋与沙特政府眼中钉 人权活动家伦敦车祸身亡](/articles/rfi/1027650.md)
-
-6-21 [运动员抵日隔离3天 印度抗议东奥防疫措施不公平 – 法国国际广播电台 - RFI](/articles/rfi/1027651.md)
-
-6-21 [以色列外长6月底访阿联  首次官方访问 – 法国国际广播电台 - RFI](/articles/rfi/1027652.md)
-
-6-21 [中共百年党庆慌什么：京沪快递切断 网民抱怨](/articles/rfi/1027653.md)
-
-6-21 [投资人忧心联准会加息 亚洲股市普遍收跌 – 法国国际广播电台 - RFI](/articles/rfi/1027654.md)
-
-6-21 [印度为所有成人免费接种疫苗 总理莫迪赞瑜伽有助抗疫 – 法国国际广播电台 - RFI](/articles/rfi/1027655.md)
-
-6-21 [COVID-19横扫全球 累计确诊逾1亿7840万例 – 法国国际广播电台 - RFI](/articles/rfi/1027656.md)
-
-6-21 [美法太空人为太空站安装太阳能板 出舱漫步6小时 – 法国国际广播电台 - RFI](/articles/rfi/1027657.md)
-
-6-21 [吉美博物馆：马克-里布的摄影回顾展 - 法国文艺欣赏](/articles/rfi/1027658.md)
-
-6-21 [新冠疫情：印度实施全民免费接种疫苗 莫迪夸赞瑜伽的&quot;保护性 &quot;优点](/articles/rfi/1027659.md)
-
-6-21 [美国高球公开赛封王 西班牙好手拉姆首夺大满贯 – 法国国际广播电台 - RFI](/articles/rfi/1027660.md)
 
