--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-26 [路透社：涉新疆视频被YouTube下架后，一人权组织被迫另寻平台](/articles/voa/1039885.md)
+
 6-26 [韩国移民新政遭反华情绪阻力](/articles/voa/1039886.md)
 
 6-26 [哈里斯副总统到访美墨边境](/articles/voa/1039887.md)
@@ -598,6 +600,4 @@
 6-12 [美国BuzzFeed新闻网站因新疆报道获普利策新闻奖](/articles/voa/1040183.md)
 
 6-12 [俄勒冈州议会罢免协助反防疫限制措施的抗议者强闯州议会大厦的议员](/articles/voa/1040184.md)
-
-6-12 [刘特佐等因试图游说美国停止调查“一马”案并遣返郭文贵受到新的刑事指控](/articles/voa/1040185.md)
 
