--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-26 [美媒: 中国以疫苗逼迫乌克兰退出新疆人权声明](/articles/dw/1041729.md)
+
 6-26 [谁是德国的 “新右翼“？](/articles/dw/1041730.md)
 
 6-26 [德国前外长：孤立中国的想法荒谬](/articles/dw/1041731.md)
@@ -598,6 +600,4 @@
 6-9 [东盟与中国避谈缅甸  南海争议仍存分歧](/articles/dw/1042027.md)
 
 6-9 [最富有美国人交税比普通工人还少](/articles/dw/1042028.md)
-
-6-9 [德国出口持续增长 涨幅不及预期](/articles/dw/1042029.md)
 
