--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+6-26 [弗洛伊德案宣判：前警察肖万获刑22.5年](/articles/dw/1041724.md)
+
+6-26 [南极洲告急：气候灾难在即](/articles/dw/1041725.md)
+
+6-26 [涉疆视频被YouTube下架 哈国人权团体另辟蹊径](/articles/dw/1041726.md)
+
+6-26 [外星人还是中俄未知科技？美国公开UFO报告](/articles/dw/1041727.md)
+
 6-26 [深度解读：为何澳洲和中国为了大堡礁起争执？](/articles/dw/1041728.md)
 
 6-26 [美媒: 中国以疫苗逼迫乌克兰退出新疆人权声明](/articles/dw/1041729.md)
@@ -592,12 +600,4 @@
 6-9 [没说实话：大众集团前董事长被起诉](/articles/dw/1042022.md)
 
 6-9 [拜登开启上任后首次外访——欧洲行](/articles/dw/1042023.md)
-
-6-9 [美参院通过抗中法案 北京批“抹黑中国发展道路”](/articles/dw/1042024.md)
-
-6-9 [蒋方舟事件：人们为何愤怒？](/articles/dw/1042025.md)
-
-6-9 [澳总理莫里森呼吁改革世贸对抗经济胁迫](/articles/dw/1042026.md)
-
-6-9 [东盟与中国避谈缅甸  南海争议仍存分歧](/articles/dw/1042027.md)
 
