--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-26 [允许观众入场观看奥运 日本在经济与防疫之间徘徊抉择](/articles/voa/1039880.md)
+
 6-26 [是飞碟还是中国无人机？美国政府UFO报告出炉](/articles/voa/1039881.md)
 
 6-26 [拜登：阿富汗人现在必须决定他们自己的未来](/articles/voa/1039882.md)
@@ -598,6 +600,4 @@
 6-12 [美国科学家看中国火星车驶入新太空竞赛](/articles/voa/1040178.md)
 
 6-12 [美参院两党推动外交抵制北京冬奥 将进一步施压美企](/articles/voa/1040179.md)
-
-6-12 [罗马尼亚总统签署法律，实际上禁止中国和华为参与其5G网络开发](/articles/voa/1040180.md)
 
