--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-26 [小银 | 与 Ben Mauk聊聊新疆、哈萨克斯坦、中国和暴力](/articles/cdt/381024.md)
+
 6-26 [看理想 | 葛兆光：历史学家能承受多大的政治压力？](/articles/cdt/381026.md)
 
 6-26 [罗翔说刑法｜祝各位同学一路平安](/articles/cdt/381028.md)
@@ -598,6 +600,4 @@
 5-20 [【图说天朝】佟丽娅、陈思诚520官宣离婚 “#撤热搜被撤热搜”](/articles/cdt/382364.md)
 
 5-20 [黄章晋｜不做新闻已经很多年](/articles/cdt/382365.md)
-
-5-20 [中式没品笑话百科｜昨夜战况速报：我被“上帝之鹰”发动了1技能](/articles/cdt/382366.md)
 
