--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-26 [迈阿密大楼倒塌：工程师两年前警告存在结构性损坏](/articles/dw/1041723.md)
+
 6-26 [弗洛伊德案宣判：前警察肖万获刑22.5年](/articles/dw/1041724.md)
 
 6-26 [南极洲告急：气候灾难在即](/articles/dw/1041725.md)
@@ -598,6 +600,4 @@
 6-10 [德国取消接种优先排序   疫苗短缺拖后腿](/articles/dw/1042021.md)
 
 6-9 [没说实话：大众集团前董事长被起诉](/articles/dw/1042022.md)
-
-6-9 [拜登开启上任后首次外访——欧洲行](/articles/dw/1042023.md)
 
