--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,24 @@
 法广
 ------
 
+6-27 [布林肯在妈妈陪伴下在巴黎读完高中](/articles/rfi/1027301.md)
+
+6-27 [香港新民主同盟宣告解散：政治环境大不如前](/articles/rfi/1027302.md)
+
+6-27 [英国卫生大臣汉考克因丑闻辞职](/articles/rfi/1027303.md)
+
+6-27 [世卫：变种病毒Delta传染力最强 至少肆虐85国](/articles/rfi/1027304.md)
+
+6-27 [澳洲Delta变异株病例增   新澳旅游泡泡暂停](/articles/rfi/1027305.md)
+
+6-27 [岸信夫：台湾的和平与稳定与日本直接相关](/articles/rfi/1027306.md)
+
+6-27 [美国商会吁拜登尽快解除欧洲入境禁令  重振经济](/articles/rfi/1027307.md)
+
+6-27 [葡萄牙Delta病毒快速传播 从里斯本向外扩散](/articles/rfi/1027308.md)
+
+6-27 [阿桑奇与未婚妻计划在英国监狱里结婚](/articles/rfi/1027309.md)
+
 6-27 [澳洲:悉尼因病毒Delta变种全面封城](/articles/rfi/1027310.md)
 
 6-27 [布林肯：美欧在对待中国的问题上是趋于一致的](/articles/rfi/1027311.md)
@@ -582,22 +600,4 @@
 6-22 [马办呼吁大陆与港府求同存异弹性处理台驻港人员问题](/articles/rfi/1027599.md)
 
 6-22 [欧股早盘走势分歧 – 法国国际广播电台 - RFI](/articles/rfi/1027600.md)
-
-6-22 [港股收黑 – 法国国际广播电台 - RFI](/articles/rfi/1027601.md)
-
-6-22 [美国批港府控《苹果》出于政治动机  黎智英获颁伊菲尔新闻自由奖](/articles/rfi/1027602.md)
-
-6-22 [《苹果》部分网上新闻已停 前高层指已现「报禁」事关全港](/articles/rfi/1027603.md)
-
-6-22 [港澳商讨通关 香港明起放宽防疫社距 惟4人限聚令不变](/articles/rfi/1027604.md)
-
-6-22 [香港特首：媒体不应涉及颠覆政府 – 法国国际广播电台 - RFI](/articles/rfi/1027605.md)
-
-6-22 [联合国年度报告：COVID-19加剧全球战乱国家侵犯儿童事件 – 法国国际广播电台 - RFI](/articles/rfi/1027606.md)
-
-6-22 [老鼠大军侵入监狱  澳洲新南威尔斯州急撤数百囚 – 法国国际广播电台 - RFI](/articles/rfi/1027607.md)
-
-6-22 [西班牙疫情趋缓 部分夜店得以重新开张 – 法国国际广播电台 - RFI](/articles/rfi/1027608.md)
-
-6-22 [墨西哥枪击酿14死 总统：对无辜民众的懦弱攻击 – 法国国际广播电台 - RFI](/articles/rfi/1027609.md)
 
