--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-27 [国务卿布林肯即将访问意大利](/articles/voa/1039871.md)
+
 6-27 [伊朗：恢复核协议有可能，但“不会永远谈判”](/articles/voa/1039872.md)
 
 6-27 [美国太平洋西北地区正在经受热浪袭击](/articles/voa/1039873.md)
@@ -598,6 +600,4 @@
 6-13 [丹麦球员在欧洲杯比赛中倒地，比赛一度中断](/articles/voa/1040169.md)
 
 6-13 [阿富汗首都爆炸炸死七人](/articles/voa/1040170.md)
-
-6-13 [七国集团似乎在对抗中国的策略上存在分歧](/articles/voa/1040171.md)
 
