--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-27 [“全球英国”战略下伦敦的向印太倾斜政策解析 - 印太纵览](/articles/rfi/1027296.md)
+
 6-27 [美新墨西哥州热气球撞电线坠毁  酿5死 – 法国国际广播电台 - RFI](/articles/rfi/1027297.md)
 
 6-27 [类鸦片药物诉讼 娇生同意支付2.3亿美元与纽约州和解 – 法国国际广播电台 - RFI](/articles/rfi/1027298.md)
@@ -598,6 +600,4 @@
 6-22 [向绿色经济转型 关键稀有金属缺乏会成问题 - 环境与发展](/articles/rfi/1027594.md)
 
 6-22 [无人机长程试飞 印度盼未来送疫苗到偏远地区 – 法国国际广播电台 - RFI](/articles/rfi/1027595.md)
-
-6-22 [欧盟对美国敞开大门 美暂不互惠 – 法国国际广播电台 - RFI](/articles/rfi/1027596.md)
 
